--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,12 @@
 name: build
 on: [release]
 
+env:
+  MINECRAFT_VERSION: 1.21.10
+  JAVA_VERSION: 21
+  RELEASE_NAME: 0.1.0 Release
+  MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -27,6 +33,7 @@ jobs:
           name: Artifacts
           path: build/libs/
       - uses: Kir-Antipov/mc-publish@v3.3
+        name: Publish to Modrinth
         with:
           # Only include this section if you wish to publish
           # your assets on Modrinth.
