--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ on:
   push: 
     branches:
       - main
+      - 'release/**'
     paths-ignore:
       - '**.md'
 
@@ -17,13 +18,13 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - name: checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
         with:
           fetch-depth: 0
       - name: validate gradle wrapper
-        uses: gradle/actions/wrapper-validation@v4
+        uses: gradle/actions/wrapper-validation@v5
       - name: setup jdk
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v5
         with:
           java-version: '21'
           distribution: 'microsoft'
@@ -42,8 +43,15 @@ jobs:
       - name: build
         run: ./gradlew build -PsemVer="${{ steps.version.outputs.majorMinorPatch }}-${{ steps.version.outputs.commitsSinceVersionSource }}"
         
+      - name: sanitize branch name
+        id: branch
+        run: |
+          SAFE_BRANCH="${{ steps.version.outputs.branchName }}"
+          SAFE_BRANCH="${SAFE_BRANCH//\//-}"
+          echo "value=$SAFE_BRANCH" >> "$GITHUB_OUTPUT"
+          
       - name: capture build artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
-          name: Artifacts
+          name: ${{ steps.branch.outputs.value }}-${{ steps.version.outputs.majorMinorPatch}}-${{ steps.version.outputs.commitsSinceVersionSource }}
           path: build/libs/
