--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,11 +1,17 @@
+version-in-branch-pattern: (\A(?!x)x)
+tag-prefix: '[vV]?(\d\.\d\d.\d\d)?-?'
+no-bump-message: '(\+semver:\s?(none|skip)|ci.*:.*|docs.*:.*)'
+strategies:
+  - Fallback
+  - ConfiguredNextVersion
+  - MergeMessage
+  - TaggedCommit
+  - TrackReleaseBranches
 branches:
   main:
     mode: ContinuousDelivery
     increment: None
     label: ''
-    source-branches: []
-    is-release-branch: false
-    is-main-branch: true
     pre-release-weight: 0
     prevent-increment:
       when-current-commit-tagged: true
@@ -14,7 +20,7 @@ branches:
     increment: None
     label: ''
     regex: ^release/*
-    source-branches: 
+    source-branches:
       - main
     is-release-branch: true
     is-main-branch: false
@@ -25,9 +31,13 @@ branches:
     mode: ContinuousDelivery
     increment: None
     label: ''
-    source-branches: 
-      - main
-      - release
     pre-release-weight: 0
     prevent-increment:
       when-current-commit-tagged: true
+ignore:
+  paths:
+    - ".*.github.*"
+    - ".*README.md.*"
+    - ".*SECURITY.md.*"
+    - ".*contributing.md.*"
+    - ".*GitVersion.yml.*"
