--- a/.github/actions/prepare-modrinth-upload/action.yml
+++ b/.github/actions/prepare-modrinth-upload/action.yml
@@ -3,7 +3,10 @@ description: Finds the correct JAR for a Minecraft version and prepares Modrinth
 
 inputs:
   minecraft-version:
-    description: The Minecraft version to find the JAR for
+    description: The Minecraft build version (Stonecutter target) to find the JAR for
+    required: true
+  display-version:
+    description: Display version string for naming (e.g., "1.20-1.20.1" or "1.21.4")
     required: true
   mod-version:
     description: The mod version string
@@ -23,10 +26,10 @@ outputs:
     description: Path to the found JAR file
     value: ${{ steps.find-jar.outputs.path }}
   version_number:
-    description: The Modrinth version number (e.g. fabric-1.21-1.0.0)
+    description: The Modrinth version number (e.g. fabric-1.20-1.20.1-1.0.0)
     value: ${{ steps.info.outputs.version_number }}
   version_name:
-    description: The Modrinth display name (e.g. 1.21 - 1.0.0)
+    description: The Modrinth display name (e.g. 1.20-1.20.1 - 1.0.0)
     value: ${{ steps.info.outputs.version_name }}
   version_type:
     description: The Modrinth version type (release or beta)
@@ -54,15 +57,15 @@ runs:
       id: info
       shell: bash
       run: |
-        MC_VERSION="${{ inputs.minecraft-version }}"
+        DISPLAY_VERSION="${{ inputs.display-version }}"
         MOD_VERSION="${{ inputs.mod-version }}"
         IS_PRERELEASE="${{ inputs.is-prerelease }}"
 
         # Transform snapshot-X to pre.X for version number (e.g., 26.1-snapshot-4 -> 26.1-pre.4)
-        MC_VERSION_SHORT="${MC_VERSION//-snapshot-/-pre.}"
+        DISPLAY_VERSION_SHORT="${DISPLAY_VERSION//-snapshot-/-pre.}"
 
-        VERSION_NUMBER="fabric-${MC_VERSION_SHORT}-${MOD_VERSION}"
-        VERSION_NAME="${MC_VERSION} - ${MOD_VERSION}"
+        VERSION_NUMBER="fabric-${DISPLAY_VERSION_SHORT}-${MOD_VERSION}"
+        VERSION_NAME="${DISPLAY_VERSION} - ${MOD_VERSION}"
 
         if [[ "$IS_PRERELEASE" == "true" ]]; then
           VERSION_TYPE="beta"
