--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Read Supported Versions
         id: versions
-        run: echo "matrix=$(jq -c '.' supportedVersions.json)" >> $GITHUB_OUTPUT
+        run: echo "matrix=$(jq -c 'keys' supportedVersions.json)" >> $GITHUB_OUTPUT
 
       - name: Calculate Version
         id: version
@@ -269,6 +269,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v6
 
+      - name: Get game versions
+        id: game-versions
+        run: |
+          # Get all compatible game versions for this group
+          VERSIONS=$(jq -r '.["${{ matrix.minecraft }}"] // ["${{ matrix.minecraft }}"] | .[]' supportedVersions.json)
+          echo "list<<EOF" >> $GITHUB_OUTPUT
+          echo "$VERSIONS" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+          # Primary version (first in group) for finding the JAR directory
+          PRIMARY=$(jq -r '.["${{ matrix.minecraft }}"] // ["${{ matrix.minecraft }}"] | .[0]' supportedVersions.json)
+          echo "primary=$PRIMARY" >> $GITHUB_OUTPUT
+
       - name: Download Artifacts
         uses: actions/download-artifact@v7
         with:
@@ -279,7 +292,8 @@ jobs:
         id: modrinth
         uses: ./.github/actions/prepare-modrinth-upload
         with:
-          minecraft-version: ${{ matrix.minecraft }}
+          minecraft-version: ${{ steps.game-versions.outputs.primary }}
+          display-version: ${{ matrix.minecraft }}
           mod-version: ${{ needs.build.outputs.mod_version }}
           is-prerelease: ${{ needs.build.outputs.is_prerelease }}
           artifact-path: artifacts
@@ -298,7 +312,7 @@ jobs:
           echo "  Version:       ${{ steps.modrinth.outputs.version_number }}"
           echo "  Display Name:  ${{ steps.modrinth.outputs.version_name }}"
           echo "  Version Type:  ${{ steps.modrinth.outputs.version_type }}"
-          echo "  Game Version:  ${{ matrix.minecraft }}"
+          echo "  Game Versions: ${{ matrix.minecraft }}"
           echo "  Loader:        fabric"
           echo ""
           echo "Changelog:"
@@ -326,7 +340,8 @@ jobs:
           version: ${{ steps.modrinth.outputs.version_number }}
           version-type: ${{ steps.modrinth.outputs.version_type }}
           loaders: fabric
-          game-versions: ${{ matrix.minecraft }}
+          game-versions: |
+            ${{ steps.game-versions.outputs.list }}
           game-version-filter: any
           changelog: ${{ needs.changelog.outputs.user-facing }}
           modrinth-featured: false
